tests/error/comptime/invalid_result_value6.bz
consteval p = {
	let arr: [10: int32];
	arr as [: int32]
};
